format and fix test

--- a/docs/howtos/DataPlane Generation - DPG/06types.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/06types.mdx
@@ -389,7 +389,8 @@ union ProvisioningState {
 For union of other union or enum. TCGC will do the flatten according to the flag.
 
 With `flatten-union-as-enum` flagged `true`:
-```json
+
+````json
 {
   "kind": "enum",
   "name": "ProvisioningState",
@@ -470,7 +471,7 @@ With `flatten-union-as-enum` flagged `false`:
     }
   ]
 }
-```
+````
 
 </TabItem>
 <TabItem value="python" label="Python">
@@ -557,7 +558,8 @@ union Orientation {
 For union of other union or enum. TCGC will do the flatten according to the flag.
 
 With `flatten-union-as-enum` flagged `true`:
-```json
+
+````json
 {
   "kind": "enum",
   "name": "Orientation",
@@ -645,7 +647,7 @@ With `flatten-union-as-enum` flagged `false`:
     }
   ]
 }
-```
+````
 
 </TabItem>
 <TabItem value="python" label="Python">
@@ -724,7 +726,8 @@ model Widget {
 For union of other union or enum. TCGC will do the flatten according to the flag.
 
 With `flatten-union-as-enum` flagged `true`:
-```json
+
+````json
 {
   "kind": "enum",
   "name": "WidgetOrientations",
@@ -812,7 +815,7 @@ With `flatten-union-as-enum` flagged `false`:
     }
   ]
 }
-```
+````
 
 </TabItem>
 <TabItem value="python" label="Python">
