--- a/docs/howtos/DataPlane Generation - DPG/06types.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/06types.mdx
@@ -5,9 +5,1068 @@ import TabItem from "@theme/TabItem";
 
 This page documents what type definitions in TypeSpec are generated as in emitted libraries
 
+## Unions
+
+### Union of literals with same type
+
+All emitters will generate their version of a closed enum.
+
+<Tabs>
+<TabItem value="typespec" label="TypeSpec" default>
+
+```typespec
+union LR {
+  left: "left",
+  right: "right",
+}
+```
+
+</TabItem>
+<TabItem value="tcgc" label="TCGC">
+
+```json
+{
+  "kind": "enum",
+  "name": "LR",
+  "generatedName": false,
+  "valueType": {
+    "kind": "string"
+  },
+  "values": [
+    {
+      "kind": "enumvalue",
+      "name": "left",
+      "value": "left"
+    },
+    {
+      "kind": "enumvalue",
+      "name": "right",
+      "value": "right"
+    }
+  ],
+  "isFixed": true,
+  "isUnionAsEnum": true
+}
+```
+
+</TabItem>
+<TabItem value="python" label="Python">
+
+Python never generates closed enum by design. We will always permit users to pass in additional values.
+
+```python
+from enum import Enum
+from corehttp.utils import CaseInsensitiveEnumMeta
+
+class LR(str, Enum, metaclass=CaseInsensitiveEnumMeta):
+  LEFT = "left"
+  RIGHT = "right"
+```
+
+</TabItem>
+<TabItem value="csharp" label="CSharp" >
+
+```csharp
+public enum LR
+{
+  Left,
+  Right
+}
+```
+
+Serialization/deserialization will respect the value defined, in this case it is "left" for `LR.Left` and "right" for `LR.Right` respectively.
+
+</TabItem>
+<TabItem value="typescript" label="Typescript" >
+
+```typescript
+export type LR = "left" | "right";
+```
+
+</TabItem>
+<TabItem value="java" label="Java" >
+
+```java
+public enum LR {
+   LEFT("left"),
+   RIGHT("right");
+}
+```
+
+</TabItem>
+</Tabs>
+
+### Inline union of literals with same type
+
+This is union defined inline at point of usage.
+
+<Tabs>
+<TabItem value="typespec" label="TypeSpec" default>
+
+```typespec
+model Widget {
+  horizontal: "left" | "right";
+}
+```
+
+</TabItem>
+<TabItem value="tcgc" label="TCGC">
+
+```json
+{
+  "kind": "enum",
+  "name": "WidgetHorizontals",
+  "generatedName": true,
+  "valueType": {
+    "kind": "string"
+  },
+  "values": [
+    {
+      "kind": "enumvalue",
+      "name": "left",
+      "value": "left"
+    },
+    {
+      "kind": "enumvalue",
+      "name": "right",
+      "value": "right"
+    }
+  ],
+  "isFixed": true,
+  "isUnionAsEnum": true
+}
+```
+
+</TabItem>
+<TabItem value="python" label="Python">
+
+Python generates this as a union of literals, not as enum. We also don't generate a closed set of literals.
+
+```python
+from typing import Literal, Union
+
+model Widget:
+  horizontal: Union[Literal["left"] | Literal["right"] | str]
+```
+
+</TabItem>
+<TabItem value="csharp" label="CSharp" >
+
+```csharp
+public partial class Widget
+{
+  public WidgetHorizontal Horizontal;
+}
+public enum WidgetHorizontal
+{
+  Left,
+  Right
+}
+```
+
+</TabItem>
+<TabItem value="typescript" label="Typescript" >
+
+```typescript
+export interface Widget {
+  horizontal: "left" | "right";
+}
+```
+
+</TabItem>
+<TabItem value="java" label="Java" >
+
+```java
+public enum WidgetHorizontal {
+   LEFT("left"),
+   RIGHT("right");
+}
+```
+
+</TabItem>
+</Tabs>
+
+### Union of basic type and literals of that type
+
+Each language will generate their version of an open enum.
+
+<Tabs>
+<TabItem value="typespec" label="TypeSpec" default>
+
+```typespec
+union Colors {
+  string,
+  red: "red",
+  blue: "blue",
+}
+```
+
+</TabItem>
+<TabItem value="tcgc" label="TCGC">
+
+```json
+{
+  "kind": "enum",
+  "name": "Colors",
+  "generatedName": false,
+  "valueType": {
+    "kind": "string"
+  },
+  "values": [
+    {
+      "kind": "enumvalue",
+      "name": "red",
+      "value": "red"
+    },
+    {
+      "kind": "enumvalue",
+      "name": "blue",
+      "value": "blue"
+    }
+  ],
+  "isFixed": false,
+  "isUnionAsEnum": true
+}
+```
+
+</TabItem>
+<TabItem value="python" label="Python">
+
+Python generates open enum again here.
+
+```python
+from enum import Enum
+from corehttp.utils import CaseInsensitiveEnumMeta
+
+class Colors(str, Enum, metaclass=CaseInsensitiveEnumMeta):
+  RED = "red"
+  BLUE = "blue"
+```
+
+</TabItem>
+<TabItem value="csharp" label="CSharp" >
+
+```csharp
+public readonly partial struct Colors : IEquatable<Colors>
+{
+  private const string RedValue = "red";
+  private const string BlueValue = "blue";
+  public static Colors Red { get; } = new Colors(RedValue);
+  public static Colors Blue { get; } = new Colors(BlueValue);
+}
+```
+
+</TabItem>
+<TabItem value="typescript" label="Typescript" >
+
+```typescript
+export type Colors = string | "red" | "blue";
+```
+
+</TabItem>
+<TabItem value="java" label="Java" >
+
+```java
+public final class Colors extends ExpandableStringEnum<Colors> {
+    public static final Colors RED = fromString("red");
+    public static final Colors BLUE = fromString("blue");
+}
+```
+
+</TabItem>
+</Tabs>
+
+### Inline union of basic type and literals of that type
+
+This is union defined inline at point of usage which include the base type as an option.
+
+<Tabs>
+<TabItem value="typespec" label="TypeSpec" default>
+
+```typespec
+model Widget {
+  color: "red" | "blue" | string;
+}
+```
+
+</TabItem>
+<TabItem value="tcgc" label="TCGC">
+
+```json
+{
+  "kind": "enum",
+  "name": "WidgetColors",
+  "generatedName": true,
+  "valueType": {
+    "kind": "string"
+  },
+  "values": [
+    {
+      "kind": "enumvalue",
+      "name": "red",
+      "value": "red"
+    },
+    {
+      "kind": "enumvalue",
+      "name": "blue",
+      "value": "blue"
+    }
+  ],
+  "isFixed": false,
+  "isUnionAsEnum": true
+}
+```
+
+</TabItem>
+<TabItem value="python" label="Python">
+
+Python generates a union of literals again. Since we always generate our typing as open, this will
+look the same as our previous example where we generate an open union of strings.
+
+```python
+from typing import Literal, Union
+
+model Widget:
+  color: Union[Literal["red"] | Literal["blue"] | str]
+```
+
+</TabItem>
+<TabItem value="csharp" label="CSharp" >
+
+```csharp
+public partial class Widget
+{
+  public WidgetColor Color;
+}
+public readonly partial struct WidgetColor : IEquatable<WidgetColor>
+{
+  private const string RedValue = "red";
+  private const string BlueValue = "blue";
+  public static WidgetColor Red { get; } = new WidgetColor(RedValue);
+  public static WidgetColor Blue { get; } = new WidgetColor(BlueValue);
+}
+```
+
+</TabItem>
+<TabItem value="typescript" label="Typescript" >
+
+```typescript
+export interface Widget {
+  color: "red" | "blue" | string;
+}
+```
+
+</TabItem>
+<TabItem value="java" label="Java" >
+
+```java
+public final class WidgetColor extends ExpandableStringEnum<Colors> {
+    public static final Color RED = fromString("red");
+    public static final Color BLUE = fromString("blue");
+}
+```
+
+</TabItem>
+</Tabs>
+
+### Union of other union/enum, basic type and literals of that type
+
+<Tabs>
+<TabItem value="typespec" label="TypeSpec" default>
+
+```typespec
+import "@azure-tools/typespec-azure-resource-manager";
+
+union ProvisioningState {
+  string,
+  "InProgress",
+  Azure.ResourceManager.ResourceProvisioningState,
+}
+```
+
+</TabItem>
+<TabItem value="tcgc" label="TCGC">
+For union of other union or enum. TCGC will do the flatten according to the flag.
+
+With `flatten-union-as-enum` flagged `true`:
+
+````json
+{
+  "kind": "enum",
+  "name": "ProvisioningState",
+  "generatedName": false,
+  "valueType": {
+    "kind": "string"
+  },
+  "values": [
+    {
+      "kind": "enumvalue",
+      "name": "InProgress",
+      "value": "InProgress"
+    },
+    {
+      "kind": "enumvalue",
+      "name": "Succeeded",
+      "value": "Succeeded"
+    },
+    {
+      "kind": "enumvalue",
+      "name": "Failed",
+      "value": "Failed"
+    },
+    {
+      "kind": "enumvalue",
+      "name": "Canceled",
+      "value": "Canceled"
+    }
+  ],
+  "isFixed": false,
+  "isUnionAsEnum": true,
+}
+
+With `flatten-union-as-enum` flagged `false`:
+
+```json
+{
+  "kind": "union",
+  "name": "ProvisioningState",
+  "generatedName": false,
+  "values": [
+    {
+      "kind": "string"
+    },
+    {
+      "kind": "constant",
+      "value": "InProgress",
+      "valueType": {
+        "kind": "string"
+      }
+    },
+    {
+      "kind": "enum",
+      "name": "ResourceProvisioningState",
+      "generatedName": false,
+      "valueType": {
+        "kind": "string"
+      },
+      "values": [
+        {
+          "kind": "enumvalue",
+          "name": "Succeeded",
+          "value": "Succeeded"
+        },
+        {
+          "kind": "enumvalue",
+          "name": "Failed",
+          "value": "Failed"
+        },
+        {
+          "kind": "enumvalue",
+          "name": "Canceled",
+          "value": "Canceled"
+        }
+      ],
+      "isFixed": true,
+      "isUnionAsEnum": false
+    }
+  ]
+}
+````
+
+</TabItem>
+<TabItem value="python" label="Python">
+
+Python generates a single open enum.
+
+```python
+from enum import Enum
+from corehttp.utils import CaseInsensitiveEnumMeta
+
+class ProvisioningState(str, Enum, metaclass=CaseInsensitiveEnumMeta):
+  IN_PROGRESS = "inProgress"
+  SUCCEEDED = "Succeeded"
+  FAILED = "Failed"
+  CANCELED = "Canceled"
+```
+
+</TabItem>
+<TabItem value="csharp" label="CSharp" >
+
+```csharp
+public readonly partial struct ProvisioningState : IEquatable<ProvisioningState>
+{
+  private const string SucceededValue = "Succeeded";
+  private const string FailedValue = "Failed";
+  private const string CanceledValue = "Canceled";
+  private const string InProgressValue = "inProgress";
+
+  public static ProvisioningState Succeeded { get; } = new ProvisioningState(SucceededValue);
+  public static ProvisioningState Failed { get; } = new ProvisioningState(FailedValue);
+  public static ProvisioningState Canceled { get; } = new ProvisioningState(CanceledValue);
+  public static ProvisioningState InProgress { get; } = new ProvisioningState(InProgressValue);
+}
+```
+
+</TabItem>
+<TabItem value="typescript" label="Typescript" >
+
+```typescript
+export type ResourceProvisioningState = "Succeeded" | "Failed" | "Canceled";
+// NOTE: extensible enum design may change in JS
+export type ProvisioningState = string | "inProgress" | ResourceProvisioningState;
+```
+
+</TabItem>
+<TabItem value="java" label="Java" >
+
+```java
+public final class ProvisioningState extends ExpandableStringEnum<ProvisioningState> {
+    public static final ProvisioningState IN_PROGRESS = fromString("inProgress");
+    public static final ProvisioningState SUCCEEDED = fromString("Succeeded");
+    public static final ProvisioningState FAILED = fromString("Failed");
+    public static final ProvisioningState CANCELED = fromString("Canceled");
+}
+```
+
+</TabItem>
+</Tabs>
+
+### Union of other unions of literals with same type
+
+<Tabs>
+<TabItem value="typespec" label="TypeSpec" default>
+
+```typespec
+union LR {
+  left: "left",
+  right: "right",
+}
+
+union UD {
+  up: "up",
+  down: "down",
+}
+
+union Orientation {
+  LR,
+  UD,
+}
+```
+
+</TabItem>
+<TabItem value="tcgc" label="TCGC">
+For union of other union or enum. TCGC will do the flatten according to the flag.
+
+With `flatten-union-as-enum` flagged `true`:
+
+````json
+{
+  "kind": "enum",
+  "name": "Orientation",
+  "generatedName": false,
+  "valueType": {
+    "kind": "string"
+  },
+  "values": [
+    {
+      "kind": "enumvalue",
+      "name": "left",
+      "value": "left"
+    },
+    {
+      "kind": "enumvalue",
+      "name": "right",
+      "value": "right"
+    },
+    {
+      "kind": "enumvalue",
+      "name": "up",
+      "value": "up"
+    },
+    {
+      "kind": "enumvalue",
+      "name": "down",
+      "value": "down"
+    }
+  ],
+  "isFixed": true,
+  "isUnionAsEnum": true,
+}
+
+With `flatten-union-as-enum` flagged `false`:
+
+```json
+{
+  "kind": "union",
+  "name": "Orientation",
+  "generatedName": false,
+  "values": [
+    {
+      "kind": "enum",
+      "name": "LR",
+      "generatedName": false,
+      "valueType": {
+        "kind": "string"
+      },
+      "values": [
+        {
+          "kind": "enumvalue",
+          "name": "left",
+          "value": "left"
+        },
+        {
+          "kind": "enumvalue",
+          "name": "right",
+          "value": "right"
+        }
+      ],
+      "isFixed": true,
+      "isUnionAsEnum": true
+    },
+    {
+      "kind": "enum",
+      "name": "UD",
+      "generatedName": false,
+      "valueType": {
+        "kind": "string"
+      },
+      "values": [
+        {
+          "kind": "enumvalue",
+          "name": "up",
+          "value": "up"
+        },
+        {
+          "kind": "enumvalue",
+          "name": "down",
+          "value": "down"
+        }
+      ],
+      "isFixed": true,
+      "isUnionAsEnum": true
+    }
+  ]
+}
+````
+
+</TabItem>
+<TabItem value="python" label="Python">
+
+```python
+from enum import Enum
+from corehttp.utils import CaseInsensitiveEnumMeta
+
+class Orientation(str, Enum, metaclass=CaseInsensitiveEnumMeta):
+  LEFT = "left"
+  RIGHT = "right"
+  UP = "up"
+  DOWN = "down"
+```
+
+</TabItem>
+<TabItem value="csharp" label="CSharp" >
+
+```csharp
+public enum Orientation
+{
+  Left,
+  Right,
+  Up,
+  Down
+}
+```
+
+</TabItem>
+<TabItem value="typescript" label="Typescript" >
+
+```typescript
+export type LR = "left" | "right";
+export type UD = "up" | "down";
+export type Orientation = LR | UD;
+```
+
+</TabItem>
+<TabItem value="java" label="Java" >
+
+```java
+public enum Orientation {
+   LEFT("left"),
+   RIGHT("right"),
+   UP("up"),
+   DOWN("down");
+}
+```
+
+</TabItem>
+</Tabs>
+
+### Inline union of other unions of literals with same type
+
+<Tabs>
+<TabItem value="typespec" label="TypeSpec" default>
+
+```typespec
+union LR {
+  left: "left",
+  right: "right",
+}
+
+union UD {
+  up: "up",
+  down: "down",
+}
+
+model Widget {
+  orientation: LR | UD;
+}
+```
+
+</TabItem>
+<TabItem value="tcgc" label="TCGC">
+For union of other union or enum. TCGC will do the flatten according to the flag.
+
+With `flatten-union-as-enum` flagged `true`:
+
+````json
+{
+  "kind": "enum",
+  "name": "WidgetOrientations",
+  "generatedName": true,
+  "valueType": {
+    "kind": "string"
+  },
+  "values": [
+    {
+      "kind": "enumvalue",
+      "name": "left",
+      "value": "left"
+    },
+    {
+      "kind": "enumvalue",
+      "name": "right",
+      "value": "right"
+    },
+    {
+      "kind": "enumvalue",
+      "name": "up",
+      "value": "up"
+    },
+    {
+      "kind": "enumvalue",
+      "name": "down",
+      "value": "down"
+    }
+  ],
+  "isFixed": true,
+  "isUnionAsEnum": true,
+}
+
+With `flatten-union-as-enum` flagged `false`:
+
+```json
+{
+  "kind": "union",
+  "name": "WidgetOrientations",
+  "generatedName": true,
+  "values": [
+    {
+      "kind": "enum",
+      "name": "LR",
+      "generatedName": false,
+      "valueType": {
+        "kind": "string"
+      },
+      "values": [
+        {
+          "kind": "enumvalue",
+          "name": "left",
+          "value": "left"
+        },
+        {
+          "kind": "enumvalue",
+          "name": "right",
+          "value": "right"
+        }
+      ],
+      "isFixed": true,
+      "isUnionAsEnum": true
+    },
+    {
+      "kind": "enum",
+      "name": "UD",
+      "generatedName": false,
+      "valueType": {
+        "kind": "string"
+      },
+      "values": [
+        {
+          "kind": "enumvalue",
+          "name": "up",
+          "value": "up"
+        },
+        {
+          "kind": "enumvalue",
+          "name": "down",
+          "value": "down"
+        }
+      ],
+      "isFixed": true,
+      "isUnionAsEnum": true
+    }
+  ]
+}
+````
+
+</TabItem>
+<TabItem value="python" label="Python">
+
+Since this is inline, Python will generate this as a single union of all possible literal values.
+
+```python
+from typing import Literal
+
+type WidgetOrientation = "left" | "right" | "up" | "down" | str
+
+model Widget:
+  orientation: WidgetOrientation
+```
+
+</TabItem>
+<TabItem value="csharp" label="CSharp" >
+
+```csharp
+public partial class Widget
+{
+  public WidgetOrientation Orientation;
+}
+public enum WidgetOrientation
+{
+  Left,
+  Right,
+  Up,
+  Down
+}
+```
+
+</TabItem>
+<TabItem value="typescript" label="Typescript" >
+
+```typescript
+export interface Widget {
+  orientation: LR | UD;
+}
+
+export type LR = "left" | "right";
+export type UD = "up" | "down";
+```
+
+</TabItem>
+<TabItem value="java" label="Java" >
+
+```java
+public enum WidgetOrientation {
+   LEFT("left"),
+   RIGHT("right"),
+   UP("up"),
+   DOWN("down");
+}
+```
+
+</TabItem>
+</Tabs>
+
+### Union with multiple types
+
+These are unions where the values don't share same type.
+
+<Tabs>
+<TabItem value="typespec" label="TypeSpec" default>
+
+```typespec
+model Shirt {
+  sizing: 32 | 34 | int32 | "small" | "medium" | string;
+}
+```
+
+</TabItem>
+<TabItem value="tcgc" label="TCGC">
+
+```json
+{
+  "kind": "union",
+  "name": "ShirtSizings",
+  "generatedName": true,
+  "values": [
+    {
+      "kind": "constant",
+      "value": 32,
+      "valueType": {
+        "kind": "int32"
+      }
+    },
+    {
+      "kind": "constant",
+      "value": 34,
+      "valueType": {
+        "kind": "int32"
+      }
+    },
+    {
+      "kind": "constant",
+      "value": "small",
+      "valueType": {
+        "kind": "string"
+      }
+    },
+    {
+      "kind": "constant",
+      "value": "medium",
+      "valueType": {
+        "kind": "string"
+      }
+    },
+    {
+      "kind": "string"
+    }
+  ]
+}
+```
+
+</TabItem>
+<TabItem value="python" label="Python">
+
+Python will generate this as a union since these entries don't share the same type
+
+```python
+from typing import Literal
+
+type ShirtSizing = Literal[32] | Literal[34] | int | Literal["small"] | Literal["medium"] | str
+
+model Shirt:
+  sizing: ShirtSizing
+```
+
+</TabItem>
+<TabItem value="csharp" label="CSharp" >
+
+```csharp
+public partial class Shirt
+{
+  public BinaryData Shirt;
+}
+```
+
+</TabItem>
+<TabItem value="typescript" label="Typescript" >
+
+```typescript
+export interface Shirt {
+  sizing: 32 | 34 | number | "small" | "medium" | string;
+}
+```
+
+</TabItem>
+<TabItem value="java" label="Java" >
+
+```java
+public final class Shirt {
+    private BinaryData sizing;
+}
+```
+
+</TabItem>
+</Tabs>
+
 ## Enums
 
-## Versioning Enums
+### Standard
+
+Standard enums will be generated as closed enums.
+
+<Tabs>
+<TabItem value="typespec" label="TypeSpec" default>
+
+```typespec
+enum LR {
+  left,
+  right,
+}
+```
+
+</TabItem>
+<TabItem value="tcgc" label="TCGC">
+
+```json
+{
+  "kind": "enum",
+  "name": "LR",
+  "generatedName": false,
+  "valueType": {
+    "kind": "string"
+  },
+  "values": [
+    {
+      "kind": "enumvalue",
+      "name": "left",
+      "value": "left"
+    },
+    {
+      "kind": "enumvalue",
+      "name": "right",
+      "value": "right"
+    }
+  ],
+  "isFixed": true,
+  "isUnionAsEnum": false
+}
+```
+
+</TabItem>
+<TabItem value="python" label="Python">
+
+Python never generates closed enums by design. We will always permit users to pass in additional values.
+
+```python
+from enum import Enum
+from corehttp.utils import CaseInsensitiveEnumMeta
+
+class LR(str, Enum, metaclass=CaseInsensitiveEnumMeta):
+  LEFT = "left"
+  RIGHT = "right"
+```
+
+</TabItem>
+<TabItem value="csharp" label="CSharp" >
+
+```csharp
+public enum LR
+{
+  Left,
+  Right
+}
+```
+
+</TabItem>
+<TabItem value="typescript" label="Typescript" >
+
+```typescript
+export type LR = "left" | "right";
+```
+
+</TabItem>
+<TabItem value="java" label="Java" >
+
+```java
+public enum LR {
+   LEFT("left"),
+   RIGHT("right");
+}
+```
+
+</TabItem>
+</Tabs>
+
+### Versioning Enums
 
 <Tabs>
 <TabItem value="typespec" label="TypeSpec" default>
@@ -24,6 +1083,35 @@ enum Versions {
 ```
 
 </TabItem>
+<TabItem value="tcgc" label="TCGC">
+
+```json
+{
+  "kind": "enum",
+  "name": "Versions",
+  "generatedName": false,
+  "valueType": {
+    "kind": "string"
+  },
+  "values": [
+    {
+      "kind": "enumvalue",
+      "name": "v1",
+      "value": "v1"
+    },
+    {
+      "kind": "enumvalue",
+      "name": "v2",
+      "value": "v2"
+    }
+  ],
+  "isFixed": true,
+  "isUnionAsEnum": false,
+  "usage": 8
+}
+```
+
+</TabItem>
 <TabItem value="" label="Python">
 
 ```
@@ -34,10 +1122,117 @@ enum Versions {
 <TabItem value="csharp" label="CSharp" >
 
 ```csharp
-public enum Versions
+// CSharp does not generate the enum used for versioning
+```
+
+</TabItem>
+<TabItem value="typescript" label="Typescript" >
+
+```typescript
+// JS does not generate the enum used for versioning
+```
+
+</TabItem>
+<TabItem value="java" label="Java" >
+
+```java
+public enum ServiceServiceVersion implements ServiceVersion {
+    V1("v1"),
+    V2("v2");
+}
+```
+
+</TabItem>
+</Tabs>
+
+### Spread
+
+Spreading enums will return the resultant enum as a new single closed enum.
+
+<Tabs>
+<TabItem value="typespec" label="TypeSpec" default>
+
+```typespec
+enum LR {
+  left,
+  right,
+}
+
+enum UD {
+  up,
+  down,
+}
+
+enum Orientation {
+  ...LR,
+  ...UD,
+}
+```
+
+</TabItem>
+<TabItem value="tcgc" label="TCGC">
+
+```json
 {
-    v1,
-    v2
+  "kind": "enum",
+  "name": "Orientation",
+  "generatedName": false,
+  "valueType": {
+    "kind": "string"
+  },
+  "values": [
+    {
+      "kind": "enumvalue",
+      "name": "left",
+      "value": "left"
+    },
+    {
+      "kind": "enumvalue",
+      "name": "right",
+      "value": "right"
+    },
+    {
+      "kind": "enumvalue",
+      "name": "up",
+      "value": "up"
+    },
+    {
+      "kind": "enumvalue",
+      "name": "down",
+      "value": "down"
+    }
+  ],
+  "isFixed": true,
+  "isUnionAsEnum": false
+}
+```
+
+</TabItem>
+<TabItem value="python" label="Python">
+
+Python generates one open enum, because Python never generates an enum as fully closed.
+
+```python
+from enum import Enum
+from corehttp.utils import CaseInsensitiveEnumMeta
+
+class Orientation(str, Enum, metaclass=CaseInsensitiveEnumMeta):
+  LEFT = "left"
+  RIGHT = "right"
+  UP = "up"
+  DOWN = "down"
+```
+
+</TabItem>
+<TabItem value="csharp" label="CSharp" >
+
+```csharp
+public enum Orientation
+{
+  Left,
+  Right,
+  Up,
+  Down
 }
 ```
 
@@ -45,16 +1240,18 @@ public enum Versions
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-TODO;
+export type Orientation = "left" | "right" | "up" | "down";
 ```
 
 </TabItem>
 <TabItem value="java" label="Java" >
 
 ```java
-public enum Versions {
-    v1,
-    v2
+public enum Orientation {
+   LEFT("left"),
+   RIGHT("right"),
+   UP("up"),
+   DOWN("down");
 }
 ```
 
