--- a/docs/howtos/DataPlane Generation - DPG/06types.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/06types.mdx
@@ -420,7 +420,7 @@ With `flatten-union-as-enum` flagged `true`:
     }
   ],
   "isFixed": false,
-  "isUnionAsEnum": true,
+  "isUnionAsEnum": true
 }
 ```
 
@@ -590,7 +590,7 @@ With `flatten-union-as-enum` flagged `true`:
     }
   ],
   "isFixed": true,
-  "isUnionAsEnum": true,
+  "isUnionAsEnum": true
 }
 ```
 
@@ -759,7 +759,7 @@ With `flatten-union-as-enum` flagged `true`:
     }
   ],
   "isFixed": true,
-  "isUnionAsEnum": true,
+  "isUnionAsEnum": true
 }
 ```
 
